Remove trailing spaces

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -19,8 +19,8 @@ monitor=,preferred,auto,1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 # Execute your favorite apps at launch
-# exec-once = waybar & hyprpaper & firefox
-exec-once = waybar & hyprpaper
+# exec-once=waybar & hyprpaper & firefox
+exec-once=waybar & hyprpaper
 
 #: }}}
 
@@ -31,37 +31,37 @@ exec-once = waybar & hyprpaper
 # Mod key used for most binds
 # MOD4 = SUPER
 # (Use the `xmodmap` command to list them all)
-$mainMod = SUPER
+$mainMod=SUPER
 
 # direction keys
-$up = k
-$down = j
-$left = h
-$right = l
+$up=K
+$down=J
+$left=H
+$right=L
 
 # preferred terminal
-$terminal = alacritty
+$terminal=alacritty
 
 # preferred file manager
-$filemanager = nautilus
+$filemanager=nautilus
 
 # define monitor(s)
-$monitor1 = eDP-1
-$monitor2 = DP-1
+$monitor1=eDP-1
+$monitor2=DP-1
 
 # bar and window color
-$bg-color =             "#16161c"
-$text-color =           "#fdf0ed"
-$active-bg-color =      "#09f7a0"
-$active-text-color =    "#16161c"
-$inactive-bg-color =    "#232530"
-$inactive-text-color =  "#6c6f93"
-$urgent-bg-color =      "#f43e5c"
-$indicator-color =      "#fab28e"
+$bg-color=             "#16161c"
+$text-color=           "#fdf0ed"
+$active-bg-color=      "#09f7a0"
+$active-text-color=    "#16161c"
+$inactive-bg-color=    "#232530"
+$inactive-text-color=  "#6c6f93"
+$urgent-bg-color=      "#f43e5c"
+$indicator-color=      "#fab28e"
 
 # Your preferred application launcher
-$menu = tofi-drun | xargs hyprctl dispatch exec --
-$menu-alt = tofi-run | xargs hyprctl dispatch exec --
+$menu=tofi-drun | xargs hyprctl dispatch exec --
+$menu-alt=tofi-run | xargs hyprctl dispatch exec --
 
 #: }}}
 
@@ -69,56 +69,56 @@ $menu-alt = tofi-run | xargs hyprctl dispatch exec --
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = us,th
-    kb_variant =
-    kb_model =
-    kb_options = grp:win_space_toggle
-    kb_rules =
+    kb_layout=us,th
+    kb_variant=
+    kb_model=
+    kb_options=grp:win_space_toggle
+    kb_rules=
 
-    follow_mouse = 1
+    follow_mouse=1
 
     touchpad {
-        disable_while_typing = true
-        natural_scroll = true
-        tap-to-click = false
+        disable_while_typing=true
+        natural_scroll=true
+        tap-to-click=false
     }
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity=0 # -1.0 - 1.0, 0 means no modification.
 }
 
 # Per-device configs
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
+    name=epic-mouse-v1
+    sensitivity=-0.5
 }
 
 device {
-    name = at-translated-set-2-keyboard
-    kb_layout = us,th
-    kb_options = grp:win_space_toggle
+    name=at-translated-set-2-keyboard
+    kb_layout=us,th
+    kb_options=grp:win_space_toggle
 }
 
 device {
-    name = usb-hid-keyboard
-    kb_layout = us,th
-    kb_options = grp:win_space_toggle
+    name=usb-hid-keyboard
+    kb_layout=us,th
+    kb_options=grp:win_space_toggle
 }
 
 device {
-    name = tpps/2-ibm-trackpoint
-    natural_scroll = true
+    name=tpps/2-ibm-trackpoint
+    natural_scroll=true
 }
 
 device {
-    name = elan-trackpoint
-    natural_scroll = true
+    name=elan-trackpoint
+    natural_scroll=true
 }
 
 device {
-    name = elan-touchpad
-    natural_scroll = true
-    tap-to-click = false
+    name=elan-touchpad
+    natural_scroll=true
+    tap-to-click=false
 }
 
 #: }}}
@@ -128,14 +128,14 @@ device {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    border_size = 2
-    gaps_in = 3
-    gaps_out = 6
-    col.inactive_border = rgba(2e303eaa)
-    col.active_border = rgba(09f7a0ee) rgba(21bfc2ee) 45deg
-    cursor_inactive_timeout = 3
+    border_size=2
+    gaps_in=3
+    gaps_out=6
+    col.inactive_border=rgba(2e303eaa)
+    col.active_border=rgba(09f7a0ee) rgba(21bfc2ee) 45deg
+    cursor_inactive_timeout=3
 
-    layout = dwindle
+    layout=dwindle
 }
 
 #: }}}
@@ -145,18 +145,18 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 9
+    rounding=9
 
     blur {
-        enabled = true
-        size = 3
-        passes = 1
+        enabled=true
+        size=3
+        passes=1
     }
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    drop_shadow=true
+    shadow_range=4
+    shadow_render_power=3
+    col.shadow=rgba(1a1a1aee)
 }
 
 #: }}}
@@ -164,18 +164,18 @@ decoration {
 #: Animations {{{
 
 animations {
-    enabled = true
+    enabled=true
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    bezier=myBezier, 0.05, 0.9, 0.1, 1.05
 
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation=windows, 1, 7, myBezier
+    animation=windowsOut, 1, 7, default, popin 80%
+    animation=border, 1, 10, default
+    animation=borderangle, 1, 8, default
+    animation=fade, 1, 7, default
+    animation=workspaces, 1, 6, default
 }
 
 #: }}}
@@ -184,13 +184,13 @@ animations {
 
 dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-    pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # you probably want this
+    pseudotile=true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    preserve_split=true # you probably want this
 }
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    new_is_master=true
 }
 
 #: }}}
@@ -199,8 +199,8 @@ master {
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = on
-    workspace_swipe_fingers = 4
+    workspace_swipe=on
+    workspace_swipe_fingers=4
 }
 
 #: }}}
@@ -208,8 +208,8 @@ gestures {
 #: Misc {{{
 
 misc {
-    disable_hyprland_logo = true
-    disable_splash_rendering = true
+    disable_hyprland_logo=true
+    disable_splash_rendering=true
 }
 
 #: }}}
@@ -221,21 +221,21 @@ misc {
 #: Basic {{{
 
 # Terminal
-bind = $mainMod, T, exec, $terminal
-bind = $mainMod, RETURN, exec, $terminal
+bind=$mainMod, T, exec, $terminal
+bind=$mainMod, RETURN, exec, $terminal
 
 # File manager
-bind = $mainMod SHIFT, RETURN, exec, $filemanager
+bind=$mainMod SHIFT, RETURN, exec, $filemanager
 
 # Kill focused window
-bind = $mainMod SHIFT, Q, killactive,
+bind=$mainMod SHIFT, Q, killactive,
 
 # Launcher
-bind = $mainMod, D, exec, $menu
-bind = $mainMod ALT, D, exec, $menu-alt
+bind=$mainMod, D, exec, $menu
+bind=$mainMod ALT, D, exec, $menu-alt
 
 # Exit hyprland
-bind = $mainMod SHIFT, E, exit,
+bind=$mainMod SHIFT, E, exit,
 
 #: }}}
 
@@ -266,118 +266,118 @@ submap = reset
 #: Moving around {{{
 
 # Move focus with hjkl keys
-bind = $mainMod, $up,       movefocus, u
-bind = $mainMod, $down,     movefocus, d
-bind = $mainMod, $left,     movefocus, l
-bind = $mainMod, $right,    movefocus, r
+bind=$mainMod, $up,       movefocus, u
+bind=$mainMod, $down,     movefocus, d
+bind=$mainMod, $left,     movefocus, l
+bind=$mainMod, $right,    movefocus, r
 
 # move focus with arrow keys
-bind = $mainMod, up,    movefocus, u
-bind = $mainMod, down,  movefocus, d
-bind = $mainMod, left,  movefocus, l
-bind = $mainMod, right, movefocus, r
+bind=$mainMod, up,    movefocus, u
+bind=$mainMod, down,  movefocus, d
+bind=$mainMod, left,  movefocus, l
+bind=$mainMod, right, movefocus, r
 
 #: }}}
 
 #: Workspaces {{{
 
 binds {
-    workspace_back_and_forth = true
+    workspace_back_and_forth=true
 }
 
 # Switch workspaces
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+bind=$mainMod, 1, workspace, 1
+bind=$mainMod, 2, workspace, 2
+bind=$mainMod, 3, workspace, 3
+bind=$mainMod, 4, workspace, 4
+bind=$mainMod, 5, workspace, 5
+bind=$mainMod, 6, workspace, 6
+bind=$mainMod, 7, workspace, 7
+bind=$mainMod, 8, workspace, 8
+bind=$mainMod, 9, workspace, 9
+bind=$mainMod, 0, workspace, 10
 
 # Move active window to a workspace
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind=$mainMod SHIFT, 1, movetoworkspace, 1
+bind=$mainMod SHIFT, 2, movetoworkspace, 2
+bind=$mainMod SHIFT, 3, movetoworkspace, 3
+bind=$mainMod SHIFT, 4, movetoworkspace, 4
+bind=$mainMod SHIFT, 5, movetoworkspace, 5
+bind=$mainMod SHIFT, 6, movetoworkspace, 6
+bind=$mainMod SHIFT, 7, movetoworkspace, 7
+bind=$mainMod SHIFT, 8, movetoworkspace, 8
+bind=$mainMod SHIFT, 9, movetoworkspace, 9
+bind=$mainMod SHIFT, 0, movetoworkspace, 10
 
 # Swap active workspace between two monitors
-bind = $mainMod ALT, BACKSLASH, swapactiveworkspaces, $monitor1 $monitor2
+bind=$mainMod ALT, BACKSLASH, swapactiveworkspaces, $monitor1 $monitor2
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind=$mainMod, mouse_down, workspace, e+1
+bind=$mainMod, mouse_up, workspace, e-1
 
 #: }}}
 
 #: Windows {{{
 
 # Move active window with hjkl keys
-bind = $mainMod SHIFT, $up,     movewindow, u
-bind = $mainMod SHIFT, $down,   movewindow, d
-bind = $mainMod SHIFT, $left,   movewindow, l
-bind = $mainMod SHIFT, $right,  movewindow, r
+bind=$mainMod SHIFT, $up,     movewindow, u
+bind=$mainMod SHIFT, $down,   movewindow, d
+bind=$mainMod SHIFT, $left,   movewindow, l
+bind=$mainMod SHIFT, $right,  movewindow, r
 
 # Move active window with arrow keys
-bind = $mainMod SHIFT, up,     movewindow, u
-bind = $mainMod SHIFT, down,   movewindow, d
-bind = $mainMod SHIFT, left,   movewindow, l
-bind = $mainMod SHIFT, right,  movewindow, r
+bind=$mainMod SHIFT, up,     movewindow, u
+bind=$mainMod SHIFT, down,   movewindow, d
+bind=$mainMod SHIFT, left,   movewindow, l
+bind=$mainMod SHIFT, right,  movewindow, r
 
 # Pin active floating window
-bind = ALT, BACKSLASH, pin
+bind=ALT, BACKSLASH, pin
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+bindm=$mainMod, mouse:272, movewindow
+bindm=$mainMod, mouse:273, resizewindow
 
 #: }}}
 
 #: Layouts {{{
 
 # Switch between layouts
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind=$mainMod, P, pseudo, # dwindle
+bind=$mainMod, J, togglesplit, # dwindle
 
 # Toggle focussed window fullscreen
-bind = $mainMod, F, fullscreen,
+bind=$mainMod, F, fullscreen,
 
 # Toggle focussed window between tiling / floating
-bind = $mainMod SHIFT, Space, togglefloating,
+bind=$mainMod SHIFT, Space, togglefloating,
 
 #: }}}
 
 #: Media control {{{
 
 # Audio
-bind = ,XF86AudioMute, exec, amixer set Master toggle
-bind = ,XF86AudioMicMute, exec, amixer set Capture toggle
-bind = ,XF86AudioRaiseVolume, exec, amixer set Master 2.5%+
-bind = ,XF86AudioLowerVolume, exec, amixer set Master 2.5%-
+bind=,XF86AudioMute, exec, amixer set Master toggle
+bind=,XF86AudioMicMute, exec, amixer set Capture toggle
+bind=,XF86AudioRaiseVolume, exec, amixer set Master 2.5%+
+bind=,XF86AudioLowerVolume, exec, amixer set Master 2.5%-
 
 # play/pause keys for spotify
-bind = ,XF86AudioPlay, exec, dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause
-bind = ,XF86AudioNext, exec, dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next
-bind = ,XF86AudioPrev, exec, dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous
+bind=,XF86AudioPlay, exec, dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause
+bind=,XF86AudioNext, exec, dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next
+bind=,XF86AudioPrev, exec, dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous
 
 #: }}}
 
 #: Misc {{{
 
 # Backlight
-bind = ,XF86MonBrightnessUp, exec, light -A 10 && notify-send 'Brightness UP' -u low
-bind = ,XF86MonBrightnessDown, exec, light -U 10 && notify-send 'Brightness DOWN' -u low
+bind=,XF86MonBrightnessUp, exec, light -A 10 && notify-send 'Brightness UP' -u low
+bind=,XF86MonBrightnessDown, exec, light -U 10 && notify-send 'Brightness DOWN' -u low
 
 # Screenshot
-bind = ,PRINT, exec, grim -g "$(slurp)" $(xdg-user-dir)/Captures/$(date +'%s_grim.png')
+bind=,PRINT, exec, grim -g "$(slurp)" $(xdg-user-dir)/Captures/$(date +'%s_grim.png')
 
 # Laptop lid switch
 # bindl = ,switch:on:Lid Switch, exec, hyprctl keyword monitor "eDP-1, 1920x1080, 1920,0, 1"
@@ -390,26 +390,26 @@ bind = ,PRINT, exec, grim -g "$(slurp)" $(xdg-user-dir)/Captures/$(date +'%s_gri
 #: Window rules {{{
 
 # Example windowrule v1
-# windowrule = float, ^(kitty)$
+# windowrule=float, ^(kitty)$
 # Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+# windowrulev2=float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+windowrulev2=suppressevent maximize, class:.* # You'll probably like this.
 
-windowrule = float, yad|nm-connection-editor|pavucontrol
-windowrule = noblur, ^(firefox)$
-windowrule = float, ^(kitty)$
-windowrule = size 50% 50%, ^(kitty)$
-windowrule = move 25% 25%, ^(kitty)$
-windowrule = animation slide, ^(kitty)$
-windowrule = float, ^(Authy Desktop)$
-windowrule = animation slide, ^(Authy Desktop)$
-windowrule = size 50% 50%, ^(Brave-browser)$
-windowrule = noblur, ^(Brave-browser)$
+windowrule=float, yad|nm-connection-editor|pavucontrol
+windowrule=noblur, ^(firefox)$
+windowrule=float, ^(kitty)$
+windowrule=size 50% 50%, ^(kitty)$
+windowrule=move 25% 25%, ^(kitty)$
+windowrule=animation slide, ^(kitty)$
+windowrule=float, ^(Authy Desktop)$
+windowrule=animation slide, ^(Authy Desktop)$
+windowrule=size 50% 50%, ^(Brave-browser)$
+windowrule=noblur, ^(Brave-browser)$
 
-windowrulev2 = workspace 1, class:^(firefox)$
-windowrulev2 = workspace 9, class:^(org.telegram.desktop)$
-windowrulev2 = workspace 9, class:^(FeatherWallet)$
+windowrulev2=workspace 1, class:^(firefox)$
+windowrulev2=workspace 9, class:^(org.telegram.desktop)$
+windowrulev2=workspace 9, class:^(FeatherWallet)$
 
 #: }}}
 
