Fix conflicted keybinds

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -345,7 +345,7 @@ bindm=$mainMod, mouse:273, resizewindow
 
 # Switch between layouts
 bind=$mainMod, P, pseudo, # dwindle
-bind=$mainMod, J, togglesplit, # dwindle
+bind=$mainMod, S, togglesplit, # dwindle
 
 # Toggle focussed window fullscreen
 bind=$mainMod, F, fullscreen,
