--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -22,6 +22,9 @@ monitor=,preferred,auto,1
 # exec-once=waybar & hyprpaper & firefox
 exec-once=waybar & hyprpaper
 
+# polkit
+exec-once=/usr/bin/lxpolkit
+
 #: }}}
 
 #: Variables {{{
