--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -242,27 +242,27 @@ bind=$mainMod SHIFT, E, exit,
 
 #: }}}
 
-#: Binding modes {{{
+#: Submaps {{{
 
-# Resize active window (mode)
-bind = ALT, R, submap, resizemode
-submap = resizemode
-binde = , H, resizeactive, -10 0
-binde = , L, resizeactive, 10 0
-binde = , K, resizeactive, 0 -10
-binde = , J, resizeactive, 0 10
-bind = , ESCAPE, submap, reset
-submap = reset
+# Resize active window
+bind=$mainMod, R, submap, resize_mode
+submap=resize_mode
+binde=, $up,    resizeactive, 0 -20
+binde=, $down,  resizeactive, 0 20
+binde=, $left,  resizeactive, -20 0
+binde=, $right, resizeactive, 20 0
+bind=, ESCAPE, submap, reset
+submap=reset
 
 # Move active window (mode)
-bind = ALT, M, submap, movemode
-submap = movemode
-binde = , H, moveactive, -10 0
-binde = , L, moveactive, 10 0
-binde = , K, moveactive, 0 -10
-binde = , J, moveactive, 0 10
-bind = , ESCAPE, submap, reset
-submap = reset
+bind=$mainMod, M, submap, move_mode
+submap=move_mode
+binde=, $up,    moveactive, 0 -20
+binde=, $down,  moveactive, 0 20
+binde=, $left,  moveactive, -20 0
+binde=, $right, moveactive, 20 0
+bind=, ESCAPE, submap, reset
+submap=reset
 
 #: }}}
 
