--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -381,6 +381,7 @@ bind=,XF86MonBrightnessDown, exec, light -U 10 && notify-send 'Brightness DOWN' 
 
 # Screenshot
 bind=,PRINT, exec, grim -g "$(slurp)" $(xdg-user-dir)/Captures/$(date +'%s_grim.png')
+bind=ALT,PRINT, exec, grim $(xdg-user-dir)/Captures/$(date +'%s_grim.png')
 
 # Laptop lid switch
 # bindl = ,switch:on:Lid Switch, exec, hyprctl keyword monitor "eDP-1, 1920x1080, 1920,0, 1"
