Add LocalSend window rule

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -411,6 +411,8 @@ windowrule=float, ^(Authy Desktop)$
 windowrule=animation slide, ^(Authy Desktop)$
 windowrule=size 50% 50%, ^(Brave-browser)$
 windowrule=noblur, ^(Brave-browser)$
+windowrule=float, ^(localsend_app)$
+windowrule=animation slide, ^(localsend_app)$
 
 windowrulev2=workspace 1, class:^(firefox)$
 windowrulev2=workspace 9, class:^(org.telegram.desktop)$
