--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -7,9 +7,9 @@
     "output": ["eDP-1", "DP-1", "DP-2"],
     "height": 24,
     "position": "top",
-    "modules-left": ["sway/workspaces", "sway/mode", "sway/window"],
-    "modules-center": [],
-    "modules-right": ["idle_inhibitor", "cpu", "memory", "temperature", "pulseaudio", "network", "backlight", "battery", "sway/language", "keyboard-state", "clock", "tray"],
+    "modules-left": ["hyprland/workspaces", "hyprland/submap"],
+    "modules-center": ["clock"],
+    "modules-right": ["idle_inhibitor", "temperature", "pulseaudio", "backlight", "network", "battery", "keyboard-state", "hyprland/language", "tray"],
 
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
