--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,7 +20,7 @@ monitor=,preferred,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 # Execute your favorite apps at launch
 # exec-once=waybar & hyprpaper & firefox
-exec-once=waybar & hyprpaper
+exec-once=$HOME/.local/bin/launch-waybar & hyprpaper
 
 # polkit
 exec-once=/usr/bin/lxpolkit
