Update comment header

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -221,6 +221,7 @@ misc {
 #: Binds {{{
 
 # see https://wiki.hyprland.org/Configuring/Binds/ for more
+# bind=MODS,key,dispatcher,params
 
 #: Basic {{{
 
