Update swap active workspace keybind

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -315,7 +315,7 @@ bind=$mainMod SHIFT, 9, movetoworkspace, 9
 bind=$mainMod SHIFT, 0, movetoworkspace, 10
 
 # Swap active workspace between two monitors
-bind=$mainMod ALT, BACKSLASH, swapactiveworkspaces, $monitor1 $monitor2
+bind=$mainMod ALT, BACKSLASH, swapactiveworkspaces, current +1
 
 # Scroll through existing workspaces with mainMod + scroll
 bind=$mainMod, mouse_down, workspace, e+1
