Add Logitech G502 per-device setting

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -115,6 +115,11 @@ device {
     tap-to-click=false
 }
 
+device {
+    name=logitech-gaming-mouse-g502
+    natural_scroll=true
+}
+
 #: }}}
 
 #: General {{{
