Fix lid switch setting

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -382,8 +382,8 @@ bind=,PRINT, exec, grim -g "$(slurp)" $(xdg-user-dir)/Captures/$(date +'%s_grim.
 bind=ALT,PRINT, exec, grim $(xdg-user-dir)/Captures/$(date +'%s_grim.png')
 
 # Laptop lid switch
-# bindl = ,switch:on:Lid Switch, exec, hyprctl keyword monitor "eDP-1, 1920x1080, 1920,0, 1"
-# bindl = ,switch:off:Lid Switch, exec, hyprctl keyword monitor "eDP-1, disable"
+bindl=,switch:off:Lid Switch, exec, hyprctl keyword monitor "eDP-1, 1920x1080, 0x0, 1"
+bindl=,switch:on:Lid Switch, exec, hyprctl keyword monitor "eDP-1, disable"
 
 #: }}}
 
