Update comment header

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -58,7 +58,7 @@ $inactive-text-color=  "#6c6f93"
 $urgent-bg-color=      "#f43e5c"
 $indicator-color=      "#fab28e"
 
-# Your preferred application launcher
+# preferred application launcher
 $menu=tofi-drun | xargs hyprctl dispatch exec --
 $menu-alt=tofi-run | xargs hyprctl dispatch exec --
 
