Turn IPC back on

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -14,6 +14,6 @@ wallpaper = eDP-1,~/.wallpaper.jpg
 wallpaper = DP-1,~/.wallpaper.jpg
 
 # IPC is disabled for better battery life
-ipc = off
+ipc = on
 
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
