--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -10,8 +10,7 @@
 
 preload = ~/.wallpaper.jpg
 
-wallpaper = eDP-1,~/.wallpaper.jpg
-wallpaper = DP-1,~/.wallpaper.jpg
+wallpaper = ,~/.wallpaper.jpg
 
 # IPC is disabled for better battery life
 ipc = on
