Fix issue when switching between outputs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -62,6 +62,9 @@ $indicator-color=      "#fab28e"
 $menu=tofi-drun | xargs hyprctl dispatch exec --
 $menu-alt=tofi-run | xargs hyprctl dispatch exec --
 
+# wallpaper
+$w1=hyprctl hyprpaper wallpaper ",~/.wallpaper.jpg"
+
 #: }}}
 
 #: Input {{{
@@ -383,7 +386,9 @@ bind=ALT,PRINT, exec, grim $(xdg-user-dir)/Captures/$(date +'%s_grim.png')
 
 # Laptop lid switch
 bindl=,switch:off:Lid Switch, exec, hyprctl keyword monitor "eDP-1, 1920x1080, 0x0, 1"
+bindl=,switch:off:Lid Switch, exec, $w1
 bindl=,switch:on:Lid Switch, exec, hyprctl keyword monitor "eDP-1, disable"
+bindl=,switch:on:Lid Switch, exec, $w1
 
 #: }}}
 
