Set wallpaper when started

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -10,7 +10,7 @@
 
 preload = ~/.wallpaper.jpg
 
-# wallpaper = ,~/.wallpaper.jpg
+wallpaper = ,~/.wallpaper.jpg
 
 # IPC is disabled for better battery life
 ipc = on
